# swrender

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
CPU_Renderer/: CMakeLists.txt
CPU_Renderer/include/: camera.h  geometry.h  model.h  pipeline.h  rasterizer.h  shader.h  tgaimage.h
CPU_Renderer/src/: CPU_Renderer.cpp  camera.cpp  model.cpp  pipeline.cpp  rasterizer.cpp  shader.cpp  tgaimage.cpp
